<resources>
    <string name="app_name">PineTimeAcc</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="available_ble_devices">Available BLE Devices</string>
    <string name="scan">Scan</string>
    <string name="no_device">No Device</string>
    <string name="ms">ms</string>
    <string name="hz">Hz</string>
    <string name="peak_delta">Peak delta:</string>
    <string name="frequency">Frequency:</string>
    <string name="time_window">Time window:</string>
    <string name="time_window2">Time window</string>
    <string name="no_device_connected">No device connected</string>
    <string name="samples">samples</string>
    <string name="show_xyz_data">Show XYZ Data</string>
    <string name="show_magnitude">Show Magnitude</string>
    <string name="connecting">Connecting</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="devices">Devices</string>
    <string name="about">About</string>
    <string name="pinetimeacc">PineTimeAcc</string>
    <string name="license">MIT License \n\n Copyright 2022 Christoph Honal \n\n Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \'Software\'), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n\n The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. \n\n THE SOFTWARE IS PROVIDED \'AS IS\', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="github_url"><a href="https://github.com/StarGate01/PineTimeAcc">https://github.com/StarGate01/PineTimeAcc</a></string>
</resources>