<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.chrz.pinetimeacc.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.chrz.pinetimeacc.ui.settings.SettingsFragment"
        android:label="@string/devices"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="de.chrz.pinetimeacc.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>